--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,7 +1,30 @@
-.chart-container {
+.date-picker-container {
+  display: flex;
+  align-items: space-between;
+  justify-content: center;
+  margin: 20px 20px;
+}
+/* Add a container for the grid */
+.chart-grid-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* Five columns */
+    grid-gap: 20px; /* Space between charts */
     margin: 20px 0;
-    width: 100%;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
   }
+  
+  /* Style each chart-container inside the grid */
+  .chart-container {
+    background: #fff; /* White background for each chart */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Soft shadow for charts */
+  }
+.dashboard-container {
+    min-height: 100vh; /* Ensure it covers the full viewport height */
+}
+.header-container {
+    background-image: url('../assets/wallstreet.webp');
+    background-size: cover;
+    background-position: center;
+    min-height: 10vh; /* Ensure it covers the full viewport height */
+}
